# ssh-chat-with-ai

./: .gitignore  .gitmodules  README.md
proto/: middleware.proto
scripts/: update_proto.sh
ssh-chat/: go.mod  go.sum  main.go
ssh-chat/proto/: middleware.pb.go  middleware_grpc.pb.go
ssh-chat/scripts/: update_proto.bat
stream-ai-message-sender/: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
stream-ai-message-sender/certs/: grpc_server.cert
stream-ai-message-sender/conf/: participants.json.example
stream-ai-message-sender/proto/: .gitignore  __init__.py  middleware_pb2.py  middleware_pb2_grpc.py
stream-ai-message-sender/scripts/: fix_proto_import.py  update_proto.bat  update_proto.sh
tests/: README.md  demo.py  dummy.py  pyproject.toml  send_dummy.py
