[project]
name = "stream-ai-message-sender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.45.0",
    "grpcio>=1.75.1",
    "grpcio-tools>=1.75.1",
    "protobuf>=6.33.0",
    "cryptography>=41.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "uvloop>=0.19.0; sys_platform != \"win32\"",
]
